plugins {
    id 'java'
    id "org.sonarqube" version "3.3"
    id 'org.springframework.boot' version "2.5.7"
    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
}


sonarqube {
    properties {
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.projectKey", "testnorge-inntekt"
        property "sonar.projectName", "testnorge-inntekt"
        property "sonar.organization", "navikt"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.project.monorepo.enabled", true
        property "sonar.login", System.getenv("SONAR_TOKEN")
    }
}

bootJar {
    archiveFileName = "app.jar"
}
dependencyManagement {
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.4'
    }
}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {

    implementation('com.google.guava:guava') {
        version {
            strictly '20.0'
        }
    }

    implementation 'no.nav.testnav.libs:security-core'
    implementation 'no.nav.testnav.libs:servlet-core'
    implementation 'no.nav.testnav.libs:servlet-insecure-security'
    implementation 'no.nav.testnav.libs:database'
    implementation 'no.nav.testnav.libs:domain'
    implementation 'no.nav.testnav.libs:data-transfer-objects'

    implementation 'org.springframework.cloud:spring-cloud-vault-config-databases'
    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation 'io.micrometer:micrometer-registry-prometheus'

    implementation 'org.apache.commons:commons-io:1.3.2'
    implementation 'commons-lang:commons-lang:2.6'

    implementation 'no.nav.registre:testnorge-consumers:1.12.0-RELEASE'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.1'
    implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'

    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'javax.validation:validation-api:2.0.1.Final'

    implementation 'org.flywaydb:flyway-core'
    implementation 'com.h2database:h2'
    implementation 'org.postgresql:postgresql'

    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}
java.sourceCompatibility = JavaVersion.VERSION_17
